5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1590_2049.log
== TEST (2019-03-23 15:36:48) 
-- CODE:
#Teste seu código aos poucos
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x=int(input("dividendo: "))
y=int(input("divisor: "))

print(dividendo)
print(divisor)
print(quociente)
print(resto)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(dividendo)
NameError: name 'dividendo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 15:45:49) 
-- CODE:
#Teste seu código aos poucos
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x=int(input("dividendo: "))
y=int(input("divisor: "))

q= x // y
r= x % y
print(x)
print(y)
print(q)
print(r)



-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 15:46:23) 
-- CODE:
#Teste seu código aos poucos
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

x=int(input("dividendo: "))
y=int(input("divisor: "))

q= x // y
r= x % y
print(x)
print(y)
print(q)
print(r)



-- EXECUTION TIME:
0.149737
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
